<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kitchen Sync</string>
    <string name="grocery_list">Grocery List</string>
    <!-- Settings Keys -->
    <string name="key_google_docs_sync">GOOGLE_DOCS_SYNC</string>
    <string name="key_text_size">TEXT_SIZE</string>
    <string name="key_theme">THEME</string>
    <string name="key_edit_stores">EDIT_STORES</string>
    <string name="key_edit_categories">EDIT_CATEGORIES</string>
    <!-- Tab names -->
    <string name="grocery_list_view_list_tab_name">Grocery List</string>
    <string name="grocery_list_view_add_item_tab_name">Add Item</string>
    <string name="grocery_list_view_add_recent_items_tab_name">Recent Items</string>
    <!-- Descriptions -->
    <string name="crossed_off_button_description">Delete grocery item</string>
    <string name="clear_all_fields">Clear Fields</string>
    <string name="currently_syncing_description">Out of Sync</string>
    <string name="dropdown_button_description">More Options</string>
    <string name="recent_items_add_image">Add This Item To Grocery List</string>
    <string name="store_field_add">Add a Store</string>
    <string name="category_field_set">Choose a Category</string>
    <!-- Text in Layouts -->
    <string name="edit_stores_add_store">Add Store</string>
    <string name="edit_categories_add_category">Add Category</string>
    <string name="grocery_edit_item">Edit Item</string>
    <string name="grocery_item_name">Item Name</string>
    <string name="grocery_amount">Amount</string>
    <string name="grocery_store">Store</string>
    <string name="grocery_category">Category</string>
    <string name="grocery_clear">Clear</string>
    <string name="grocery_add_to_list">Add To List</string>
    <string name="grocery_store_selector">Add a Store</string>
    <string name="grocery_category_selector">Select a Category</string>
    <string-array name="grocery_dialog_options">
        <item>Edit</item>
    </string-array>
    <string name="grocery_clear_fields_warning">Are you sure you want to clear all fields?</string>
    <!-- Text in Menus -->
    <string name="grocery_menu_sort_alphabetical">Sort Alphabetically First</string>
    <string name="grocery_menu_sort_category">Sort by Category First</string>
    <string name="grocery_menu_sort_alphabetical_asc">Sort Alphabetically A-Z</string>
    <string name="grocery_menu_sort_alphabetical_desc">Sort Alphabetically Z-A</string>
    <string name="grocery_menu_sort_category_asc">Sort by Category A-Z</string>
    <string name="grocery_menu_sort_category_desc">Sort by Category Z-A</string>
    <!-- Generics -->
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- Settings Menu -->
    <string name="settings_google_doc_sync_title">Google Docs Sync</string>
    <string name="settings_google_doc_sync_on">Syncing On</string>
    <string name="settings_google_doc_sync_off">Syncing Off</string>
    <string name="settings_text_size_title">Text Size</string>
    <string-array name="settings_text_size_list">
        <item>@string/small</item>
        <item>@string/medium</item>
        <item>@string/large</item>
    </string-array>
    <string name="settings_theme_title">Theme</string>
    <string-array name="settings_theme_list">
        <item>@string/light</item>
        <item>@string/dark</item>
    </string-array>
    <string name="settings_edit_category_title">Value Editing</string>
    <string name="settings_edit_stores_title">Edit Stores</string>
    <string name="settings_edit_stores_summary">Add/Remove Stores from Autocomplete</string>
    <string name="settings_edit_categories_title">Edit Categories</string>
    <string name="settings_edit_categories_summary">Add/Remove Categories from Autocomplete</string>
    <!-- Error Messages -->
    <string name="error_item_already_exists">Item already exists. Please edit the item instead.</string>
    <string name="error_google_docs_sync">Error syncing with Google Drive. Please try again. (If this message persists, try deleting the Kitchen Sync Grocery List spreadsheet on Google Drive)</string>
    
</resources>