<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/grocery_list_menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/grocery_list_menu_sort_order"
        android:showAsAction="never"
        android:title="@string/grocery_menu_sort_alphabetical"/>
    <item
        android:id="@+id/grocery_list_menu_sort_alphabetical"
        android:showAsAction="never"
        android:title="@string/grocery_menu_sort_alphabetical_desc"/>
    <item
        android:id="@+id/grocery_list_menu_sort_category"
        android:showAsAction="never"
        android:title="@string/grocery_menu_sort_category_desc"/>
</menu>